Fix box align

--- a/front/css/questionnaire.css
+++ b/front/css/questionnaire.css
@@ -68,7 +68,7 @@ body {
     font-size: 14px;
     border-radius: 3px;
     white-space: normal;
-    vertical-align: baseline;
+    vertical-align: bottom;
 }
 #msform .action-button:hover, #msform .action-button:focus {
     box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
